Add controls UI

--- a/server/app/templates/_base.html
+++ b/server/app/templates/_base.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <title>{{ title }}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    {# Disables responsive
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
+    #}
     {% block meta %}{% endblock %}
     {% block head %}{% endblock %}
   </head>
